Code Snippet_Organised - Resubmission-01-2025/Istio/backend-to-db-policy-v1.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: backend-to-db-policy-v1
  namespace: jenkins
spec:
  selector:
    matchLabels:
      app: my-app-db
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["spiffe://cluster.local/ns/jenkins/sa/backend-sa"]  # allow service account
    to:
    - operation:
        ports: ["3306"]
