Code Snippet_Organised - Resubmission-01-2025/Istio/backend-to-db-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: backend-to-db-policy
  namespace: jenkins
spec:
  selector:
    matchLabels:
      app: my-app-backend
  action: ALLOW
  rules:
  - to:
    - operation:
        ports: ["3306"]
    when:
    - key: request.auth.principal
      values: ["spiffe://cluster.local/ns/jenkins/sa/backend-sa"]  # The backend service account
