Code Snippet_Organised - Resubmission-01-2025/Istio/deny-all-to-db.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-all-to-db
  namespace: jenkins
spec:
  selector:
    matchLabels:
      app: my-app-db  # Target the database
  action: DENY
  rules:
  - {}
